# laniusc

./: .gitignore  .rustfmt.toml  AGENTS.MD  AI_POLICY.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  LEXING.md  LEXING_ADDITIONAL.md  LICENSE-MIT  LLM_REMINDERS.md  NEXT_FOR_PERFORMANCE.md  OLD_GOAL.md  PARSING.md  README.md  SAMSARA_OF_LANIUS.md  TEST_RUN_LOG.md  TODO.md  build.rs  deny.toml  summary.txt
crates/laniusc-compiler/: Cargo.toml  build.rs
crates/laniusc-compiler/src/: compiler.rs  lib.rs  reflection.rs  shader_artifacts.rs
crates/laniusc-compiler/src/cli/: daemon.rs  dispatch.rs  doctor.rs  entry.rs  fallback.rs  fmt.rs  help.rs  mod.rs  package.rs
crates/laniusc-compiler/src/codegen/: functions.rs  link_byte_source.rs  link_layout.rs  lowering.rs  lowering_ir.rs  lowering_pipeline.rs  mod.rs  scan.rs  schedule.rs  unit.rs  wasm.rs  wasm_lowering.rs  wasm_module.rs  wasm_object_artifact.rs  x86.rs  x86_artifact.rs  x86_lowering.rs  x86_object_artifact.rs
crates/laniusc-compiler/src/compiler/: artifact_descriptor.rs  build_progress.rs  diagnostics.rs  gpu_compiler.rs  gpu_public_api.rs  public_planning_api.rs  semantic_interface.rs  test_support.rs  tests.rs
crates/laniusc-compiler/src/dev/: generator.rs  mod.rs
crates/laniusc-compiler/src/gpu/: buffers.rs  compiler_graph.rs  debug.rs  device.rs  env.rs  mod.rs  passes_core.rs  readback.rs  scan.rs  timer.rs  trace.rs  workspace.rs
crates/laniusc-compiler/src/lexer/: buffers.rs  debug.rs  driver.rs  features.rs  mod.rs  test_cpu.rs  types.rs  util.rs
crates/laniusc-compiler/src/parser/: README.md  buffers.rs  debug.rs  driver.rs  hir_records.rs  mod.rs  readback.rs  syntax.rs  tables.rs
crates/laniusc-compiler/src/type_checker/: bind_groups.rs  bind_models.rs  bind_support.rs  compiler_graph.rs  dependency_interface.rs  mod.rs  module_path.rs  params.rs  pass_loaders.rs  preflight.rs  (+4 more)
(+2928 files in other folders)
