[package]
name = "laniusc"
version = "0.1.0"
edition = "2024"
default-run = "laniusc"

[dependencies]
wgpu = { version = "26.0.1", features = ["spirv"] }

anyhow = "1.0"
bytemuck = "1.23.2"
encase = "0.11.1"
pollster = "0.4.0"
hashbrown = "0.15.5"
which = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.0"
serde_json = "1.0"
log = "0.4"
rayon = "1.10.0"

[build-dependencies]
anyhow = "1.0"
which = "8.0.0"
