[package]
name = "laniusc-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "29.0.3", features = ["spirv"] }

anyhow = "1.0"
encase = "0.11.1"
pollster = "0.4.0"
hashbrown = "0.15.5"
which = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.0"
serde_json = "1.0"
log = "0.4"
rayon = "1.10.0"
rand = "0.9.2"
futures-intrusive = "0.5.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
bnf = "0.5.0"

[features]
gpu-debug = []
graphics_debugger = []

[build-dependencies]
which = "8.0.0"

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
